--- a/springboot_quick2/src/main/resources/application.properties
+++ b/springboot_quick2/src/main/resources/application.properties
@@ -1,3 +1,16 @@
-person:
-    name: 刘海强
-    age: 28
+#端口
+server.port=8081
+#当前web应用名称
+server.servlet.context-path=/demo
+
+#mysql 数据库配置
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+
+#spring集成Mybatis环境
+#pojo别名扫描包
+mybatis.type-aliases-package=com.company
+#加载Mybatis映射文件
+mybatis.mapper-locations=classpath:mapper/*Mapper.xml
